--- a/spec/fixtures/vcr_cassettes/BackendFacade/_get_user_campaigns/returns_an_array_of_all_UserCampaign_objects_that_a_user_has.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_get_user_campaigns/returns_an_array_of_all_UserCampaign_objects_that_a_user_has.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/users/1/user_campaigns
+    uri: http://127.0.0.1:3000/api/v1/users/1/user_campaigns
     body:
       encoding: US-ASCII
       string: ''
@@ -17,8 +17,8 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers:
       X-Frame-Options:
       - SAMEORIGIN
@@ -34,21 +34,19 @@ http_interactions:
       - application/json; charset=utf-8
       Vary:
       - Accept
-      Etag:
-      - W/"49630a2cab157c07c077d6172052d5c0"
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       X-Request-Id:
-      - 61bf09f9-b1d4-43f8-91dd-a7193cf69858
+      - 9703c666-00f9-45a7-a5ad-f04d3aadb009
       X-Runtime:
-      - '0.013269'
+      - '0.007518'
       Server-Timing:
-      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.60, instantiation.active_record;dur=1.37,
-        process_action.action_controller;dur=4.43
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.15, instantiation.active_record;dur=0.01,
+        process_action.action_controller;dur=0.78
       Content-Length:
-      - '616'
+      - '63'
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"user_campaign","attributes":{"role":"dm"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}},{"id":"8","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}},{"id":"10","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"7","type":"campaign"}},"character":{"data":null}}}]}'
-  recorded_at: Fri, 07 Jun 2024 06:50:59 GMT
+      string: '{"errors":[{"status":"400","title":"Couldn''t find that user"}]}'
+  recorded_at: Fri, 21 Jun 2024 08:06:05 GMT
 recorded_with: VCR 6.2.0
