--- a/spec/fixtures/vcr_cassettes/BackendFacade/_item/can_get_item_info.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/_item/can_get_item_info.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/items/1
+    uri: http://127.0.0.1:3000/api/v1/items/1
     body:
       encoding: US-ASCII
       string: ''
@@ -35,20 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"3a97d2d9312cfdacac096800f1ab6554"
+      - W/"b7d500007f685a052228d3f2620c28fa"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - ebf4b2d1-c4c8-4e12-8df4-b4ad902bf118
+      - 9664ef73-686e-4af3-b5e2-6f3094e173fa
       X-Runtime:
-      - '0.007208'
+      - '0.010615'
       Server-Timing:
-      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.36, instantiation.active_record;dur=0.04,
-        process_action.action_controller;dur=2.49
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.43, instantiation.active_record;dur=0.04,
+        process_action.action_controller;dur=3.36
       Content-Length:
-      - '884'
+      - '559'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"},{"id":"55","type":"campaign_item"},{"id":"82","type":"campaign_item"},{"id":"109","type":"campaign_item"},{"id":"136","type":"campaign_item"},{"id":"163","type":"campaign_item"},{"id":"190","type":"campaign_item"},{"id":"217","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"},{"id":"3","type":"campaign"},{"id":"4","type":"campaign"},{"id":"5","type":"campaign"},{"id":"6","type":"campaign"},{"id":"7","type":"campaign"},{"id":"8","type":"campaign"},{"id":"9","type":"campaign"}]}}}}'
-  recorded_at: Fri, 07 Jun 2024 06:50:59 GMT
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"},{"id":"55","type":"campaign_item"},{"id":"82","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"},{"id":"3","type":"campaign"},{"id":"4","type":"campaign"}]}}}}'
+  recorded_at: Fri, 21 Jun 2024 08:06:05 GMT
 recorded_with: VCR 6.2.0
