--- a/spec/fixtures/vcr_cassettes/BackendFacade/get_all_items/can_hit_back_end_endpoint_-_items.yml
+++ b/spec/fixtures/vcr_cassettes/BackendFacade/get_all_items/can_hit_back_end_endpoint_-_items.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/items/1
+    uri: http://127.0.0.1:3000/api/v1/items/1
     body:
       encoding: US-ASCII
       string: ''
@@ -35,20 +35,20 @@ http_interactions:
       Vary:
       - Accept
       Etag:
-      - W/"2127c84e763b6d0d7e3986223e93bc5e"
+      - W/"66e76dbd488079abf26a9bd1f0b8f850"
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - a19be9dd-ab81-4635-a4cb-0edc7789ff5a
+      - 70876d82-f711-4eee-9409-97734b4cd8bb
       X-Runtime:
-      - '0.048227'
+      - '0.008212'
       Server-Timing:
-      - start_processing.action_controller;dur=0.01, sql.active_record;dur=1.06, instantiation.active_record;dur=0.72,
-        process_action.action_controller;dur=11.92
+      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.50, instantiation.active_record;dur=0.05,
+        process_action.action_controller;dur=3.22
       Content-Length:
-      - '819'
+      - '495'
     body:
       encoding: UTF-8
-      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"},{"id":"55","type":"campaign_item"},{"id":"82","type":"campaign_item"},{"id":"109","type":"campaign_item"},{"id":"136","type":"campaign_item"},{"id":"163","type":"campaign_item"},{"id":"190","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"},{"id":"3","type":"campaign"},{"id":"4","type":"campaign"},{"id":"5","type":"campaign"},{"id":"6","type":"campaign"},{"id":"7","type":"campaign"},{"id":"8","type":"campaign"}]}}}}'
-  recorded_at: Fri, 07 Jun 2024 06:50:59 GMT
+      string: '{"data":{"id":"1","type":"item","attributes":{"name":"Light armor","animal_products_cost":1,"cloth_cost":0,"farmed_goods_cost":0,"food_cost":0,"foraged_goods_cost":0,"metal_cost":1,"stone_cost":0,"wood_cost":0,"monster_parts_cost":0},"relationships":{"campaign_items":{"data":[{"id":"1","type":"campaign_item"},{"id":"28","type":"campaign_item"},{"id":"55","type":"campaign_item"}]},"campaigns":{"data":[{"id":"1","type":"campaign"},{"id":"2","type":"campaign"},{"id":"3","type":"campaign"}]}}}}'
+  recorded_at: Fri, 21 Jun 2024 08:06:05 GMT
 recorded_with: VCR 6.2.0
