--- a/spec/fixtures/vcr_cassettes/DndService/can_call_the_api_and_return_a_list_of_classes.yml
+++ b/spec/fixtures/vcr_cassettes/DndService/can_call_the_api_and_return_a_list_of_classes.yml
@@ -21,9 +21,9 @@ http_interactions:
       Server:
       - Cowboy
       Report-To:
-      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1717726169&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=oDHflMtbWTR39E%2BwKIG5g3YYHfQhN6YN%2FS6NyoHJO%2BU%3D"}]}'
+      - '{"group":"heroku-nel","max_age":3600,"endpoints":[{"url":"https://nel.heroku.com/reports?ts=1718957169&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1n8aQKyFzjfZ7YPGB1ymRVXzEAMyG61iSuOrutlXeOo%3D"}]}'
       Reporting-Endpoints:
-      - heroku-nel=https://nel.heroku.com/reports?ts=1717726169&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=oDHflMtbWTR39E%2BwKIG5g3YYHfQhN6YN%2FS6NyoHJO%2BU%3D
+      - heroku-nel=https://nel.heroku.com/reports?ts=1718957169&sid=1b10b0ff-8a76-4548-befa-353fc6c6c045&s=1n8aQKyFzjfZ7YPGB1ymRVXzEAMyG61iSuOrutlXeOo%3D
       Nel:
       - '{"report_to":"heroku-nel","max_age":3600,"success_fraction":0.005,"failure_fraction":0.05,"response_headers":["Via"]}'
       Connection:
@@ -37,9 +37,9 @@ http_interactions:
       X-Ratelimit-Remaining:
       - '9999'
       Date:
-      - Fri, 07 Jun 2024 02:09:29 GMT
+      - Fri, 21 Jun 2024 08:06:09 GMT
       X-Ratelimit-Reset:
-      - '1717726171'
+      - '1718957171'
       Content-Type:
       - application/json; charset=utf-8
       Content-Length:
@@ -51,5 +51,5 @@ http_interactions:
     body:
       encoding: UTF-8
       string: '{"count":12,"results":[{"index":"barbarian","name":"Barbarian","url":"/api/classes/barbarian"},{"index":"bard","name":"Bard","url":"/api/classes/bard"},{"index":"cleric","name":"Cleric","url":"/api/classes/cleric"},{"index":"druid","name":"Druid","url":"/api/classes/druid"},{"index":"fighter","name":"Fighter","url":"/api/classes/fighter"},{"index":"monk","name":"Monk","url":"/api/classes/monk"},{"index":"paladin","name":"Paladin","url":"/api/classes/paladin"},{"index":"ranger","name":"Ranger","url":"/api/classes/ranger"},{"index":"rogue","name":"Rogue","url":"/api/classes/rogue"},{"index":"sorcerer","name":"Sorcerer","url":"/api/classes/sorcerer"},{"index":"warlock","name":"Warlock","url":"/api/classes/warlock"},{"index":"wizard","name":"Wizard","url":"/api/classes/wizard"}]}'
-  recorded_at: Fri, 07 Jun 2024 02:09:29 GMT
+  recorded_at: Fri, 21 Jun 2024 08:06:09 GMT
 recorded_with: VCR 6.2.0
