--- a/spec/fixtures/vcr_cassettes/Party_Index_Page/has_all_information.yml
+++ b/spec/fixtures/vcr_cassettes/Party_Index_Page/has_all_information.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/campaigns/1/characters
+    uri: http://127.0.0.1:3000/api/v1/campaigns/1/characters
     body:
       encoding: US-ASCII
       string: ''
@@ -39,12 +39,12 @@ http_interactions:
       Cache-Control:
       - max-age=0, private, must-revalidate
       X-Request-Id:
-      - 0c801899-112c-4a1a-be95-3373b8b3373f
+      - 024eb922-d157-463e-8975-06815ddab919
       X-Runtime:
-      - '0.009346'
+      - '0.051991'
       Server-Timing:
-      - start_processing.action_controller;dur=0.00, sql.active_record;dur=1.01, instantiation.active_record;dur=0.06,
-        process_action.action_controller;dur=5.05
+      - start_processing.action_controller;dur=0.01, sql.active_record;dur=16.31,
+        instantiation.active_record;dur=1.01, process_action.action_controller;dur=34.64
       Content-Length:
       - '688'
     body:
@@ -52,5 +52,5 @@ http_interactions:
       string: '{"data":[{"id":"1","type":"character","attributes":{"name":"Test Character
         1","user_id":2,"dnd_race":"Dragonborn","dnd_class":"Barbarian","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"2","type":"user"}},"user_campaigns":{"data":[{"id":"2","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}},{"id":"2","type":"character","attributes":{"name":"Test
         Character 2","user_id":3,"dnd_race":"Human","dnd_class":"Bard","image_url":null,"character_image":null},"relationships":{"user":{"data":{"id":"3","type":"user"}},"user_campaigns":{"data":[{"id":"3","type":"user_campaign"}]},"campaigns":{"data":[{"id":"1","type":"campaign"}]}}}]}'
-  recorded_at: Fri, 07 Jun 2024 05:21:36 GMT
+  recorded_at: Fri, 21 Jun 2024 08:10:32 GMT
 recorded_with: VCR 6.2.0
