--- a/spec/fixtures/vcr_cassettes/User/_dm_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_dm.yml
+++ b/spec/fixtures/vcr_cassettes/User/_dm_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_dm.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/users/1/user_campaigns
+    uri: http://127.0.0.1:3000/api/v1/users/10/user_campaigns
     body:
       encoding: US-ASCII
       string: ''
@@ -17,8 +17,8 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers:
       X-Frame-Options:
       - SAMEORIGIN
@@ -34,21 +34,19 @@ http_interactions:
       - application/json; charset=utf-8
       Vary:
       - Accept
-      Etag:
-      - W/"dd3c1a7c4dde7d05fdc1e7eb68af1d39"
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       X-Request-Id:
-      - fe07fd98-1e3f-4722-83f5-67f0ba667b3f
+      - 68100861-464d-4e9c-aaf8-7c426f139fa7
       X-Runtime:
-      - '0.005887'
+      - '0.012222'
       Server-Timing:
-      - start_processing.action_controller;dur=0.00, sql.active_record;dur=0.33, instantiation.active_record;dur=0.09,
-        process_action.action_controller;dur=1.55
+      - start_processing.action_controller;dur=0.01, sql.active_record;dur=0.13, instantiation.active_record;dur=0.01,
+        process_action.action_controller;dur=1.20
       Content-Length:
-      - '205'
+      - '63'
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"1","type":"user_campaign","attributes":{"role":"dm"},"relationships":{"user":{"data":{"id":"1","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":null}}}]}'
-  recorded_at: Fri, 07 Jun 2024 05:21:37 GMT
+      string: '{"errors":[{"status":"400","title":"Couldn''t find that user"}]}'
+  recorded_at: Fri, 21 Jun 2024 08:06:09 GMT
 recorded_with: VCR 6.2.0
