--- a/spec/fixtures/vcr_cassettes/User/_party_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_a_party_member.yml
+++ b/spec/fixtures/vcr_cassettes/User/_party_campaigns/returns_all_of_a_users_user_campaigns_where_they_are_a_party_member.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: http://localhost:3000/api/v1/users/2/user_campaigns
+    uri: http://127.0.0.1:3000/api/v1/users/10/user_campaigns
     body:
       encoding: US-ASCII
       string: ''
@@ -17,8 +17,8 @@ http_interactions:
       - "*/*"
   response:
     status:
-      code: 200
-      message: OK
+      code: 400
+      message: Bad Request
     headers:
       X-Frame-Options:
       - SAMEORIGIN
@@ -34,21 +34,19 @@ http_interactions:
       - application/json; charset=utf-8
       Vary:
       - Accept
-      Etag:
-      - W/"929693851a70c2af2f0bbea2827f5672"
       Cache-Control:
-      - max-age=0, private, must-revalidate
+      - no-cache
       X-Request-Id:
-      - f2ad6d3b-a192-45ae-bf58-a0fbece46fb9
+      - aa7a8695-6ac0-4bc3-9395-2c10ac212c89
       X-Runtime:
-      - '0.006321'
+      - '0.011324'
       Server-Timing:
-      - start_processing.action_controller;dur=0.01, sql.active_record;dur=0.33, instantiation.active_record;dur=0.07,
-        process_action.action_controller;dur=1.64
+      - start_processing.action_controller;dur=0.01, sql.active_record;dur=0.18, instantiation.active_record;dur=0.01,
+        process_action.action_controller;dur=1.23
       Content-Length:
-      - '240'
+      - '63'
     body:
       encoding: UTF-8
-      string: '{"data":[{"id":"2","type":"user_campaign","attributes":{"role":"party_member"},"relationships":{"user":{"data":{"id":"2","type":"user"}},"campaign":{"data":{"id":"1","type":"campaign"}},"character":{"data":{"id":"1","type":"character"}}}}]}'
-  recorded_at: Fri, 07 Jun 2024 05:21:37 GMT
+      string: '{"errors":[{"status":"400","title":"Couldn''t find that user"}]}'
+  recorded_at: Fri, 21 Jun 2024 08:06:09 GMT
 recorded_with: VCR 6.2.0
